[package]
name = "video_to_df"
version = "0.1.0"
edition = "2024"

[dependencies]
ffmpeg-next = {version = "8.0.0"}
image = "0.25.8"
flate2 = "1.1.2"
base64 = "0.22.1"
serde_json = { version = "1.0.143", features = ["preserve_order"] }
rayon = "1.11.0"

[dev-dependencies]
criterion = "0.7.0"

[[bench]]
name = "optimizations"
harness = false

[[bench]]
name = "io_pipeline"
harness = false