[package]
name = "video_to_df"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "v2df"
path = "src/main.rs"

[dependencies]
ffmpeg-next = {version = "8.0.0"}
image = "0.25.8"
flate2 = "1.1.2"
base64 = "0.22.1"
serde_json = { version = "1.0.143", features = ["preserve_order"] }
serde = { version = "1.0", features = ["derive"] }
